Add some more warnings

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -18,7 +18,8 @@ endif()
 
 # For GCC and Clang, enable C++11 support and add some other flags
 if(USING_GCC OR USING_CLANG)
-  add_compile_options(-std=c++11 -pedantic -Wall -Wextra -Wshadow)
+  add_compile_options(-std=c++11 -pedantic -Wall -Wextra
+                      -Wshadow -Wmissing-declarations -Wnon-virtual-dtor)
 endif()
 
 set(CMAKE_MODULE_PATH ${CMAKE_SOURCE_DIR}/CMake/Modules)
